force-app/main/default/objects/KT_Signature_Config__mdt/KT_Signature_Config__mdt.object-meta.xml
<CustomObject>
    <description>Per-domain B4 e-signature settings including default provider, expiry, legal notice, and legal validity requirements.</description>
    <label>KT Signature Config</label>
    <pluralLabel>KT Signature Configs</pluralLabel>
</CustomObject>