force-app/main/default/objects/KT_Signature_Config__mdt/fields/Default_Provider__c.field-meta.xml
<CustomField>
    <fullName>Default_Provider__c</fullName>
    <description>Default e-signature provider for this domain.</description>
    <label>Default Provider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>KT Sign</fullName><default>true</default><label>KT Sign</label></value>
            <value><fullName>DocuSign</fullName><default>false</default><label>DocuSign</label></value>
            <value><fullName>Adobe Sign</fullName><default>false</default><label>Adobe Sign</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>