force-app/main/default/objects/KT_Signature_Config__mdt/fields/Domain_Code__c.field-meta.xml
<CustomField>
    <fullName>Domain_Code__c</fullName>
    <description>Domain code this signature configuration applies to.</description>
    <label>Domain Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>