force-app/main/default/objects/KT_Signature_Config__mdt/fields/Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Days__c</fullName>
    <defaultValue>14</defaultValue>
    <description>Default signature expiry period in days.</description>
    <label>Expiry Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>