force-app/main/default/objects/KT_Signature_Config__mdt/fields/Legal_Notice_Text__c.field-meta.xml
<CustomField>
    <fullName>Legal_Notice_Text__c</fullName>
    <description>Legal notice text displayed to signers before electronic signature consent.</description>
    <label>Legal Notice Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>