force-app/main/default/objects/KT_Signature_Config__mdt/fields/Require_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Require_Geolocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Require browser geolocation capture for this domain's signatures.</description>
    <label>Require Geolocation</label>
    <type>Checkbox</type>
</CustomField>