force-app/main/default/objects/KT_Signature_Config__mdt/fields/Require_IP__c.field-meta.xml
<CustomField>
    <fullName>Require_IP__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Require IP address capture for this domain's signatures.</description>
    <label>Require IP</label>
    <type>Checkbox</type>
</CustomField>